# Automation_auditor

./: .env.example  README.md  pyproject.toml  run_graph.py
reports/: interim_report.md  report_bypeer_received.md  report_onpeer_generated.md  report_onself_generated.md
rubric/: week2_rubric.json
src/: __init__.py  config.py  graph.py  state.py
src/nodes/: detectives.py  judges.py  justice.py
src/tools/: doc_tools.py  repo_tools.py  vision_tools.py
tests/: test_detectives.py  test_doc_tools.py  test_repo_tools.py  test_state.py
